--- a/.github/workflows/JobStatusModelCD.yaml
+++ b/.github/workflows/JobStatusModelCD.yaml
@@ -10,8 +10,7 @@ on:
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}    
-  ACCOUNT_ID: $ {{ secrets.ACCOUNT_ID }} 
-  LAMBDA_FUNCTION: ${{ secrets.LAMBDA_FUNCTION }}   
+
 
 jobs:
   deploy:
@@ -48,5 +47,8 @@ jobs:
         id: deploy-lambda
         env:
           IMAGE_TAG: ${{ github.sha }}
+            ACCOUNT_ID: $ {{ secrets.ACCOUNT_ID }} 
+            LAMBDA_FUNCTION: ${{ secrets.LAMBDA_FUNCTION }}   
+            ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }} 
         run:
           aws lambda update-function-code --function-name $LAMBDA_FUNCTION --image-uri $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
