--- a/.github/workflows/JobStatusModelCD.yaml
+++ b/.github/workflows/JobStatusModelCD.yaml
@@ -10,6 +10,8 @@ on:
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}    
+  ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }} 
+  LAMBDA_FUNCTION: ${{ secrets.LAMBDA_FUNCTION }}  
 
 
 jobs:
@@ -46,9 +48,9 @@ jobs:
       - name: Deploy to lambda
         id: deploy-lambda
         env:
-          IMAGE_TAG: ${{ github.sha }}
-            ACCOUNT_ID: $ {{ secrets.ACCOUNT_ID }} 
-            LAMBDA_FUNCTION: ${{ secrets.LAMBDA_FUNCTION }}   
-            ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }} 
+          IMAGE_TAG: ${{ github.sha }} 
+          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }} 
+          ACCOUNT_ID: ${{ env.ACCOUNT_ID }} 
+          LAMBDA_FUNCTION: ${{ env.LAMBDA_FUNCTION }} 
         run:
           aws lambda update-function-code --function-name $LAMBDA_FUNCTION --image-uri $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
