gmail sample code

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ Email-Data.csv
 GoogleNews-vectors-negative300.bin.gz
 *.env
 client_secret.json
-EmailHandler/
 .venv/
 .conda/
 Models/NERModel/kaggle.json
+Models/
+node_modules/
