cloud deployment workflow

--- a/.github/workflows/deployCloud.yaml
+++ b/.github/workflows/deployCloud.yaml
@@ -3,7 +3,7 @@ name: Deploy Cloud
 on:
   push:
     branches:
-      - Cloud-config
+      - cloud-config
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
