cloud deployment workflow

--- a/.github/workflows/deployCloud.yaml
+++ b/.github/workflows/deployCloud.yaml
@@ -36,5 +36,6 @@ jobs:
       - name: Deploy cloud
         id: deploy-cloud
         run: |
+          cd ../Cloud-config/prod
           terraform init
           terraform apply
