cloud deployment workflow

--- a/.github/workflows/deployCloud.yaml
+++ b/.github/workflows/deployCloud.yaml
@@ -36,6 +36,7 @@ jobs:
       - name: Deploy cloud
         id: deploy-cloud
         run: |
-          cd ../Cloud-config/prod
+          pwd
+          ls
           terraform init
           terraform apply
