--- a/.github/workflows/deployCloud.yaml
+++ b/.github/workflows/deployCloud.yaml
@@ -10,6 +10,7 @@ env:
   ACCESS_KEY: ${{secrets.AWS_ACCESS_KEY_ID}}
   SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   ECR_NAME: ${{secrets.ECR_NAME}}
+  AWS_REGION: ${{ secrets.AWS_REGION }}      
 
 
 jobs:
