--- a/.github/workflows/deployFrontend.yaml
+++ b/.github/workflows/deployFrontend.yaml
@@ -31,6 +31,7 @@ jobs:
       id: build-frontend
       run: |
             cd front-end
+            npm i
             npm run build
 
     - name: Deploy static site to S3 bucket
