--- a/.github/workflows/deployBackend.yaml
+++ b/.github/workflows/deployBackend.yaml
@@ -1,11 +1,9 @@
 name: Deploy Backend
 
 on:
-    workflow_run:
-      workflows: 
-        - Deploy Cloud
-      types:
-        - completed
+    push:
+      branches:
+        - main
 
 env:
   GOOGLE_CREDENTIALS:  ${{ secrets.GOOGLE_CREDENTIALS }}
