--- a/.github/workflows/deployFrontend.yaml
+++ b/.github/workflows/deployFrontend.yaml
@@ -1,9 +1,11 @@
 name: Deploy Frontend
 
 on:
-  push:
-    branches:
-    - asd
+  workflow_run:
+    workflows: 
+      - Deploy Cloud
+    types:
+      - completed
 
 env:
   GOOGLE_CREDENTIALS:  ${{ secrets.GOOGLE_CREDENTIALS }}
@@ -36,3 +38,5 @@ jobs:
 
     - name: Deploy static site to S3 bucket
       run: aws s3 sync ./front-end/dist/ s3://appliscan-frontend --delete
+
+      
