--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon back-end/server.js"
+    "start": "nodemon back-end/server.js",
+    "gmail-api": "nodemon gmail-api/server.js"
   },
   "type": "module",
   "keywords": [],
