--- a/.github/workflows/deployEmailAPI.yaml
+++ b/.github/workflows/deployEmailAPI.yaml
@@ -44,7 +44,7 @@ jobs:
           export_default_credentials: true
 
       - name: Configure docker for GCP
-        run: gcloud auth configure-docker
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
