--- a/.github/workflows/deployBackend.yaml
+++ b/.github/workflows/deployBackend.yaml
@@ -42,14 +42,14 @@ jobs:
           export_default_credentials: true
 
       - name: Configure docker for GCP
-        run: gcloud auth configure-docker
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: appliscan-backend/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:latest
+          tags: us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/appliscan-backend/${{ env.BACKEND_SERVICE }}:latest
           build-args: |
             CLIENT_ID=${{env.CLIENT_ID}}
             CLIENT_SECRET=${{env.CLIENT_SECRET}}
@@ -59,11 +59,12 @@ jobs:
             AWS_ACCESS_KEY_ID=${{env.ACCESS_KEY}}
             AWS_SECRET_ACCESS_KEY=${{env.SECRET_ACCESS_KEY}}
             COMMAND=start
+            EMAIL_SERVER=${{ env.EMAIL_SERVER }}
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
-          image: appliscan-backend/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:latest
+          image: us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/appliscan-backend/${{ env.BACKEND_SERVICE }}:latest
           service: ${{ env.BACKEND_SERVICE }}
           region: us-central1
           platform: managed
