--- a/.github/workflows/JobRelatedModelCD.yaml
+++ b/.github/workflows/JobRelatedModelCD.yaml
@@ -3,7 +3,7 @@ name: Deploy to JobRelated Model
 on:
   push:
     branches:
-      - asd
+      - main
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
