--- a/Models/JobNotJobModel/Dockerfile
+++ b/Models/JobNotJobModel/Dockerfile
@@ -5,6 +5,10 @@ WORKDIR ${LAMBDA_TASK_ROOT}
 COPY requirements.txt .
 
 RUN yum -y install libgomp
+RUN apt-get update && \
+    apt-get install -y build-essential g++ && \
+    rm -rf /var/lib/apt/lists/*
+
 
 RUN pip install -r requirements.txt 
 
