--- a/Models/JobNotJobModel/Dockerfile
+++ b/Models/JobNotJobModel/Dockerfile
@@ -1,14 +1,10 @@
-FROM public.ecr.aws/lambda/python:3.8
+FROM public.ecr.aws/lambda/python:3.8-slim
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
 COPY requirements.txt .
 
-RUN yum -y groupinstall "Development Tools" && \
-    yum -y install gcc-c++ libgomp && \
-    yum clean all
-
-RUN pip install --no-cache-dir -r requirements.txt 
+RUN pip install --no-cache-dir -r requirements.txt  
 
 COPY src/ .
 
