--- a/.github/workflows/NERModelCD.yaml
+++ b/.github/workflows/NERModelCD.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - nermodel
       - nermodel_deployment
+      - main
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
