--- a/.github/workflows/JobStatusModelCD.yaml
+++ b/.github/workflows/JobStatusModelCD.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - JobStatusModel
       - JobStatusModelDeployment
+      - main
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
