--- a/.github/workflows/deployEmailAPI.yaml
+++ b/.github/workflows/deployEmailAPI.yaml
@@ -5,6 +5,7 @@ on:
       branches:
         - asd
         - gmail-api
+        - main
 
 env:
   GOOGLE_CREDENTIALS:  ${{ secrets.GOOGLE_CREDENTIALS }}
