--- a/Models/JobStatusModel/Dockerfile
+++ b/Models/JobStatusModel/Dockerfile
@@ -4,9 +4,7 @@ WORKDIR ${LAMBDA_TASK_ROOT}
 
 COPY requirements.txt .
 
-RUN yum -y install libgomp
-
-RUN pip install -r requirements.txt 
+RUN pip install --no-cache-dir -r requirements.txt  
 
 COPY src/ .
 
