model code changes

--- a/.github/workflows/deployCloud.yaml
+++ b/.github/workflows/deployCloud.yaml
@@ -3,7 +3,7 @@ name: Deploy Cloud
 on:
   push:
     branches:
-      - asd
+      - main
 
 env:
   GOOGLE_CREDENTIALS:  ${{ secrets.GOOGLE_CREDENTIALS }}
