--- a/.github/workflows/NERModelCD.yaml
+++ b/.github/workflows/NERModelCD.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - nermodel
       - nermodel_deployment
-      - main
+      - asd
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
