--- a/.github/workflows/deployBackend.yaml
+++ b/.github/workflows/deployBackend.yaml
@@ -3,7 +3,7 @@ name: Deploy Backend
 on:
     push:
       branches:
-        - asd
+        - main
 
 env:
   GOOGLE_CREDENTIALS:  ${{ secrets.GOOGLE_CREDENTIALS }}
