--- a/.github/workflows/JobStatusModelCD.yaml
+++ b/.github/workflows/JobStatusModelCD.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - JobStatusModel
       - JobStatusModelDeployment
-      - main
+      - asd
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}      
