--- a/.github/workflows/deployEmailAPI.yaml
+++ b/.github/workflows/deployEmailAPI.yaml
@@ -25,6 +25,7 @@ env:
   REDIRECT_URI:        ${{ secrets.REDIRECT_URI }}
   EMAIL_SERVICE:       ${{ secrets.EMAIL_SERVICE }}
   EMAIL_SERVER:        ${{ secrets.EMAIL_SERVER }}
+  DB_URI:              ${{ secrets.DB_URI }}
 
 jobs:
   deploy-backend:
@@ -65,6 +66,7 @@ jobs:
             AWS_SECRET_ACCESS_KEY=${{env.SECRET_ACCESS_KEY}}
             COMMAND=gmail-api
             EMAIL_SERVER=${{ env.EMAIL_SERVER }}
+            DB_URI=${{ env.DB_URI }}
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
