--- a/.github/workflows/deployFrontend.yaml
+++ b/.github/workflows/deployFrontend.yaml
@@ -1,11 +1,9 @@
 name: Deploy Frontend
 
 on:
-  workflow_run:
-    workflows: 
-      - Deploy Cloud
-    types:
-      - completed
+  push:
+    branches:
+      - main
 
 env:
   GOOGLE_CREDENTIALS:  ${{ secrets.GOOGLE_CREDENTIALS }}
