--- a/.github/workflows/deployBackendUpdated.yaml
+++ b/.github/workflows/deployBackendUpdated.yaml
@@ -49,15 +49,15 @@ jobs:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             IMAGE_TAG: ${{ github.sha }}
         run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:applications.$IMAGE_TAG ./back-end/ApplicationsService
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:applications.$IMAGE_TAG
-            echo "image_applications=$ECR_REGISTRY/$ECR_REPOSITORY:applications.$IMAGE_TAG" >> $GITHUB_OUTPUT
+            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:applications ./back-end/ApplicationsService
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:applications
+            echo "image_applications=$ECR_REGISTRY/$ECR_REPOSITORY:applications" >> $GITHUB_OUTPUT
 
       - name: Build and push UserService image
         env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             IMAGE_TAG: ${{ github.sha }}
         run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:user.$IMAGE_TAG ./back-end/UserService
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:user.$IMAGE_TAG
-            echo "image_user=$ECR_REGISTRY/$ECR_REPOSITORY:user.$IMAGE_TAG" >> $GITHUB_OUTPUT
+            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:user ./back-end/UserService
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:user
+            echo "image_user=$ECR_REGISTRY/$ECR_REPOSITORY:user" >> $GITHUB_OUTPUT
